force-app/main/default/objects/CYWebprojekte__c/CYWebprojekte__c.object-meta.xml
<CustomObject>
    <label>CY - Webprojekte</label>
    <nameField>
        <displayFormat>CYWP-{0000}</displayFormat>
        <label>CY - Webprojekte ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CY - Webprojekte</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>