force-app/main/default/objects/CYWebprojekte__c/fields/AnalyticsAccount__c.field-meta.xml
<CustomField>
    <fullName>AnalyticsAccount__c</fullName>
    <label>Analytics Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>