force-app/main/default/objects/CYWebprojekte__c/fields/Backupprogrammierer__c.field-meta.xml
<CustomField>
    <fullName>Backupprogrammierer__c</fullName>
    <label>Backupprogrammierer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>