force-app/main/default/objects/CYWebprojekte__c/fields/Bemerkungen__c.field-meta.xml
<CustomField>
    <fullName>Bemerkungen__c</fullName>
    <label>Bemerkungen</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>