force-app/main/default/objects/CYWebprojekte__c/fields/CMS__c.field-meta.xml
<CustomField>
    <fullName>CMS__c</fullName>
    <label>CMS</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Drupal</fullName>
            </value>
            <value>
                <fullName>Kirby</fullName>
            </value>
            <value>
                <fullName>Magnolia</fullName>
            </value>
            <value>
                <fullName>qBrick</fullName>
            </value>
            <value>
                <fullName>QbrickKuhsaft</fullName>
                <label>Qbrick/Kuhsaft</label>
            </value>
            <value>
                <fullName>Squarespace</fullName>
            </value>
            <value>
                <fullName>Typo3</fullName>
            </value>
            <value>
                <fullName>Wordpress</fullName>
            </value>
            <value>
                <fullName>Sonstiges</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>