force-app/main/default/objects/CYWebprojekte__c/fields/CMSVersion__c.field-meta.xml
<CustomField>
    <fullName>CMSVersion__c</fullName>
    <label>CMS Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>