force-app/main/default/objects/CYWebprojekte__c/fields/DNSBei__c.field-meta.xml
<CustomField>
    <fullName>DNSBei__c</fullName>
    <label>DNS bei</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>