force-app/main/default/objects/CYWebprojekte__c/fields/Domains__c.field-meta.xml
<CustomField>
    <fullName>Domains__c</fullName>
    <label>Domains</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>