force-app/main/default/objects/CYWebprojekte__c/fields/Domainverwalter__c.field-meta.xml
<CustomField>
    <fullName>Domainverwalter__c</fullName>
    <label>Domainverwalter</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>