force-app/main/default/objects/CYWebprojekte__c/fields/Flipbook__c.field-meta.xml
<CustomField>
    <fullName>Flipbook__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flipbook</label>
    <type>Checkbox</type>
</CustomField>