force-app/main/default/objects/CYWebprojekte__c/fields/Fonts__c.field-meta.xml
<CustomField>
    <fullName>Fonts__c</fullName>
    <label>Fonts</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LokalGehostet</fullName>
                <label>Lokal gehostet</label>
            </value>
            <value>
                <fullName>FontsCom</fullName>
                <label>Fonts.com</label>
            </value>
            <value>
                <fullName>Typekit</fullName>
            </value>
            <value>
                <fullName>Sonstiges</fullName>
            </value>
            <value>
                <fullName>Keine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>