force-app/main/default/objects/CYWebprojekte__c/fields/GithubRepo__c.field-meta.xml
<CustomField>
    <fullName>GithubRepo__c</fullName>
    <label>Github Repo</label>
    <type>Url</type>
</CustomField>