force-app/main/default/objects/CYWebprojekte__c/fields/HostingDei__c.field-meta.xml
<CustomField>
    <fullName>HostingDei__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Hosting bei</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CY - Webprojekte</relationshipLabel>
    <relationshipName>CYWebprojekte</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>