force-app/main/default/objects/CYWebprojekte__c/fields/MailAufHostingEingerichtet__c.field-meta.xml
<CustomField>
    <fullName>MailAufHostingEingerichtet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mail auf Hosting eingerichtet</label>
    <type>Checkbox</type>
</CustomField>