force-app/main/default/objects/CYWebprojekte__c/fields/Plugins__c.field-meta.xml
<CustomField>
    <fullName>Plugins__c</fullName>
    <label>Plugins</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>