force-app/main/default/objects/CYWebprojekte__c/fields/Projekt__c.field-meta.xml
<CustomField>
    <fullName>Projekt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Projekt</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>CY - Webprojekte</relationshipLabel>
    <relationshipName>CYWebprojekte</relationshipName>
    <type>Lookup</type>
</CustomField>