force-app/main/default/objects/CYWebprojekte__c/fields/ProjektleiterKunde__c.field-meta.xml
<CustomField>
    <fullName>ProjektleiterKunde__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Projektleiter Kunde</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CY - Webprojekte (Projektleiter Kunde)</relationshipLabel>
    <relationshipName>CYWebprojekte3</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>