force-app/main/default/objects/CYWebprojekte__c/fields/Projektname__c.field-meta.xml
<CustomField>
    <fullName>Projektname__c</fullName>
    <label>Projektname</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>