force-app/main/default/objects/CYWebprojekte__c/fields/Rechnungskontakt__c.field-meta.xml
<CustomField>
    <fullName>Rechnungskontakt__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Rechnungskontakt</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CY - Webprojekte (Rechnungskontakt)</relationshipLabel>
    <relationshipName>CYWebprojekte4</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>