force-app/main/default/objects/CYWebprojekte__c/fields/Server__c.field-meta.xml
<CustomField>
    <fullName>Server__c</fullName>
    <label>Server</label>
    <length>255</length>
    <type>Text</type>
</CustomField>