force-app/main/default/objects/CYWebprojekte__c/fields/SLADatum__c.field-meta.xml
<CustomField>
    <fullName>SLADatum__c</fullName>
    <label>SLA Datum</label>
    <type>Date</type>
</CustomField>