force-app/main/default/objects/CYWebprojekte__c/fields/SLAKosten__c.field-meta.xml
<CustomField>
    <fullName>SLAKosten__c</fullName>
    <label>SLA Kosten</label>
    <length>255</length>
    <type>Text</type>
</CustomField>