force-app/main/default/objects/CYWebprojekte__c/fields/SLAVorhanden__c.field-meta.xml
<CustomField>
    <fullName>SLAVorhanden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SLA vorhanden</label>
    <type>Checkbox</type>
</CustomField>