force-app/main/default/objects/CYWebprojekte__c/fields/SSL__c.field-meta.xml
<CustomField>
    <fullName>SSL__c</fullName>
    <label>SSL</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nein</fullName>
            </value>
            <value>
                <fullName>KostenlosesZertifikat</fullName>
                <label>Kostenloses Zertifikat</label>
            </value>
            <value>
                <fullName>KostenpflichtigesZertifikat</fullName>
                <label>Kostenpflichtiges Zertifikat</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>