force-app/main/default/objects/CYWebprojekte__c/fields/Technologie__c.field-meta.xml
<CustomField>
    <fullName>Technologie__c</fullName>
    <label>Technologie</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PHP</fullName>
            </value>
            <value>
                <fullName>Ruby</fullName>
            </value>
            <value>
                <fullName>Java</fullName>
            </value>
            <value>
                <fullName>Sonstiges</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>