force-app/main/default/objects/CYWebprojekte__c/fields/UmsetzungBackend__c.field-meta.xml
<CustomField>
    <fullName>UmsetzungBackend__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Umsetzung Backend</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CY - Webprojekte (Umsetzung Backend)</relationshipLabel>
    <relationshipName>CYWebprojekte1</relationshipName>
    <type>Lookup</type>
</CustomField>