force-app/main/default/objects/CYWebprojekte__c/fields/UmsetzungDesign__c.field-meta.xml
<CustomField>
    <fullName>UmsetzungDesign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Umsetzung Design</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CY - Webprojekte (Umsetzung Design)</relationshipLabel>
    <relationshipName>CYWebprojekte2</relationshipName>
    <type>Lookup</type>
</CustomField>