force-app/main/default/objects/CYWebprojekte__c/fields/UmsetzungFrontend__c.field-meta.xml
<CustomField>
    <fullName>UmsetzungFrontend__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Umsetzung Frontend</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CY - Webprojekte (Umsetzung Frontend)</relationshipLabel>
    <relationshipName>CY_Webprojekte</relationshipName>
    <type>Lookup</type>
</CustomField>