force-app/main/default/objects/CYWebprojekte__c/fields/URLCMSLogin__c.field-meta.xml
<CustomField>
    <fullName>URLCMSLogin__c</fullName>
    <label>URL CMS Login</label>
    <type>Url</type>
</CustomField>