force-app/main/default/objects/CYWebprojekte__c/fields/URLPatternLibrary__c.field-meta.xml
<CustomField>
    <fullName>URLPatternLibrary__c</fullName>
    <label>URL Pattern Library</label>
    <type>Url</type>
</CustomField>