force-app/main/default/objects/CYWebprojekte__c/fields/URLProduction__c.field-meta.xml
<CustomField>
    <fullName>URLProduction__c</fullName>
    <label>URL Production</label>
    <type>Url</type>
</CustomField>