force-app/main/default/objects/CYWebprojekte__c/fields/URLStaging__c.field-meta.xml
<CustomField>
    <fullName>URLStaging__c</fullName>
    <label>URL Staging</label>
    <type>Url</type>
</CustomField>