force-app/main/default/objects/CYWebprojekte__c/fields/VerantwortungBackend__c.field-meta.xml
<CustomField>
    <fullName>VerantwortungBackend__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Verantwortung Backend</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CY - Webprojekte (Verantwortung Backend)</relationshipLabel>
    <relationshipName>CYWebprojekte1</relationshipName>
    <type>Lookup</type>
</CustomField>