force-app/main/default/objects/CYWebprojekte__c/fields/VerantwortungDesign__c.field-meta.xml
<CustomField>
    <fullName>VerantwortungDesign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Verantwortung Design</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CY - Webprojekte (Verantwortung Design)</relationshipLabel>
    <relationshipName>CYWebprojekte2</relationshipName>
    <type>Lookup</type>
</CustomField>