force-app/main/default/objects/CYWebprojekte__c/fields/VerantwortungFrontend__c.field-meta.xml
<CustomField>
    <fullName>VerantwortungFrontend__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Verantwortung Frontend</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CY - Webprojekte</relationshipLabel>
    <relationshipName>CYWebprojekte</relationshipName>
    <type>Lookup</type>
</CustomField>