force-app/main/default/objects/CYWebprojekte__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Projekt__c</columns>
    <columns>Account__c</columns>
    <columns>SLAVorhanden__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SLAVorhanden__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All</label>
</ListView>