force-app/main/default/objects/CYWebprojekte__c/listViews/CA_Alle_Kuhsaft_Projekte.listView-meta.xml
<ListView>
    <fullName>CA_Alle_Kuhsaft_Projekte</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>CA - Alle Kuhsaft Projekte</label>
</ListView>